<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.heroes.HeroesFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/filtrar_herois"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/atributo"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/attrybut_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/icon_strength_selected"
                android:backgroundTintMode="screen"
                android:contentDescription="@string/attrybut_strength" />

            <ImageButton
                android:id="@+id/attrybut_agility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/icon_agility_selected"
                android:contentDescription="@string/attrybut_agility" />

            <ImageButton
                android:id="@+id/attrybut_inteligency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/icon_intelligence_selected"
                android:contentDescription="@string/attrybut_inteligency" />

            <ImageButton
                android:id="@+id/limparFiltros"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/clean_filters"
                android:contentDescription="@string/limpar_filtros" />


            <!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:text="@string/complexidade"-->
<!--                android:textColor="@color/black" />-->

<!--            <androidx.appcompat.widget.AppCompatButton-->
<!--                android:id="@+id/complexity1"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@drawable/buttons_heroes_complexcity"-->
<!--                />-->

<!--            <androidx.appcompat.widget.AppCompatButton-->
<!--                android:id="@+id/complexity2"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@drawable/buttons_heroes_complexcity"-->
<!--                />-->

<!--            <androidx.appcompat.widget.AppCompatButton-->
<!--                android:id="@+id/complexity3"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@drawable/buttons_heroes_complexcity"-->
<!--                />-->

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"

        android:text="@string/title_dota2_heroes"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:text="@string/text_dota2_heroes"
        android:textColor="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/heroesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>